--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -3,7 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Площа квадрата</title>
+    <title>Лаб. №1</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        section {
+            border: 1px solid #ccc;
+            padding: 15px;
+            max-width: 400px;
+            border-radius: 10px;
+        }
+
+        h2 {
+            margin-top: 0;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .group {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,6 +50,73 @@
         <button id="reverseBtn">Обернути</button>
         <p id="reverseResult"></p>
     </section>
+
+    <hr />
+
+    <section>
+        <h2>Наступна дата</h2>
+        <label for="day">День:</label>
+        <input type="number" id="day" min="1" max="31">
+        <label for="month">Місяць:</label>
+        <input type="number" id="month" min="1" max="12">
+        <label for="year">Рік:</label>
+        <input type="number" id="year" min="1">
+        <button id="nextDateBtn">Визначити наступну дату</button>
+        <p id="nextDateResult"></p>
+    </section>
+
+    <hr />
+
+    <section>
+        <h2>Числа від 1 до 100, кратні введеному числу</h2>
+        <label for="divisor">Число:</label>
+        <input type="number" id="divisor" min="1">
+        <button id="divisibleBtn">Показати кратні</button>
+        <p id="divisibleResult"></p>
+    </section>
+
+    <hr />
+
+    <section>
+        <h2>Площа прямокутника або квадрата (2 параметри)</h2>
+        <label for="length2">Довжина:</label>
+        <input type="number" id="length2" min="1">
+        <label for="width2">Ширина (необов’язково):</label>
+        <input type="number" id="width2" min="1">
+        <button id="areaBtn2">Обчислити площу</button>
+        <p id="areaResult2"></p>
+    </section>
+
+    <hr />
+
+    <section>
+        <h2>Замовлення морозива</h2>
+
+        <div class="group">
+            <label><strong>Оберіть розмір:</strong></label>
+            <label><input type="radio" name="size" value="small" checked> Маленький (10 грн)</label>
+            <label><input type="radio" name="size" value="large"> Великий (25 грн)</label>
+        </div>
+
+        <fieldset class="group">
+            <legend>Начинки (виберіть хоча б одну):</legend>
+            <label><input type="checkbox" value="chocolate" class="topping"> Шоколад (+5
+                грн)</label>
+            <label><input type="checkbox" value="caramel" class="topping"> Карамель (+6
+                грн)</label>
+            <label><input type="checkbox" value="berries" class="topping"> Ягоди (+10
+                грн)</label>
+        </fieldset>
+
+        <div class="group">
+            <label><input type="checkbox" id="marshmallow"> Додати маршмелоу (+5 грн)</label>
+        </div>
+
+        <button id="calculateBtn">Підрахувати</button>
+        <p id="iceCreamResult"></p>
+    </section>
+
+    <hr />
 
     <script src="dist/script.js"></script>
 </body>
